# stocks_telegram_bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  stocks_telegram_bot.py
bot/: __init__.py  admin_commands.py  config.py  handlers.py  logic.py  messages.py
logs/: stats.json
utils/: decorators.py  google_sheets.py  logger.py  stats.py
